<resources>
    <string name="app_name">autoshop</string>
    <string name="action_settings">Settings</string>
    <string name="don_t_show_splash">Don\'t show splash</string>
    <string name="hello_blank_fragment">Splash Fragment</string>
    <string name="no_data_available">No data</string>
    <string name="exit">Выйти</string>
    <string name="ret_exit">Вернуться</string>
    <string-array name="menu_items">
        <item>Главная</item>
        <item>Товары</item>
        <item>Корзина</item>
        <item>Кабинет</item>
        <item>Контакты</item>
        <item>О магазине</item>
        <item>О приложении</item>
        <item>Контакты</item>
    </string-array>
    <string-array name="menu_cabinet_items">
        <item>Корзина</item>
        <item>Заказы</item>
        <item>Баланс</item>
        <item>Доставка</item>
        <item>Контакты</item>
        <item>Выйти</item>
    </string-array>
    <string name="menu_product">Товары</string>
    <string name="menu_cart">Корзина</string>
    <string name="menu_checkout">Заказы</string>
    <string name="menu_profile">О магазине</string>
    <string name="alert">Отсуствует связь с интернетом!</string>
    <string name="alert_category">Данные не получены</string>
    <string name="pref_app_title">О приложении</string>
    <string name="pref_app_summary">Отображение местоположения друзей на карте</string>
    <string name="pref_version_title">Версия сборки</string>
    <string name="pref_developer_title">Разработчик</string>
    <string name="pref_developer_summary">A.Lyapustin</string>
    <string name="pref_share_title">Поделитесь приложением</string>
    <string name="pref_share_summary">Расскажите друзьям об этом приложении</string>
    <string name="pref_rate_review_title">Поставьте оценку</string>
    <string name="pref_rate_review_summary">Оцените приложение и оставьте отзыв в GooglePlay</string>
    <string name="pref_share_key">prefShareKey</string>
    <string name="pref_rate_review_key">prefRateReviewKey</string>
    <string name="build">Сборка:</string>
    <string name="share_to">Поделиться</string>
    <string name="subject">WhereWe</string>
    <string name="message">Вы можете скачать приложение "Видеоуроки Start Android" для Android в </string>
    <string name="googleplay_url">https://play.google.com/store/apps/details?id=ru.nwts.appsyoutube</string>
    <string name="information_tab1">
		Добро пожаловать в “Student Shop”. Интернет-магазин “Student Shop” первый и единственный специализированный магазин для студентов. В нашем онлайн магазине Вы можете купить товары дешевле, чем во многих магазинах, кроме того доставка заказа свыше 350 рублей осуществляется БЕСПЛАТНО. Прежде чем делать покупки, в разделе «Как заказать» ознакомьтесь с правилами заказа и оплаты товаров. Моментально, после заказа с Вами свяжется менеджер для дальнейших действий.
	</string>
    <string name="information_tab2">
	    Для того чтобы заказать товар: 1) Перейдите в нужную категорию и выберите товар. 2) После того, как выбрали товар, нажмите на кнопку купить. 3) Как только ваш товар будет добавлен в корзину, перейдите в неё, нажмите на кнопку «галочка» и оформите заказ. Все поля оформления обязательны к заполнению. Выберите форму оплаты. 4) После оформления нажмите на кнопку «отправить» и мы свяжемся с Вами для доставки товаров в удобное для Вас время.
	</string>
    <string name="information_tab3">
	    При оформлении заказа выберите удобный для Вас способ оплаты. По умолчанию выбор оплаты: Оплата наличными курьеру. Оплачиваете прямо при приёме товаров курьеру. При выборе других методов оплаты, Вам следует до приезда курьера оплатить заказ по квитанции, который получили от нашего менеджера.
	</string>
    <string name="txt_screen_3">3-й экран</string>
    <string name="txt_screen_2">2-й экран</string>
    <string name="txt_screen_1">1-й экран</string>
    <string name="product_detail_name">Информация о товаре</string>
    <string name="information_name">Информация</string>
    <string name="toolbar_main_menu">Основное меню</string>
    <string name="toolbar_main_category">Категории товаров</string>
    <string name="toolbar_main_subcategory">Список подкатегорий</string>
    <string name="toolbar_main_product_catalog">Список товаров</string>
    <string name="price_name">Цена</string>
    <string name="quantity_name">Количество</string>
    <string name="preferences_title">Настройки</string>
    <string name="productFullDesc">Подробнее...</string>
    <string name="productFullToShortDesc">Свернуть окно подробнее...</string>
    <string name="title_activity_scrolling_review">ScrollingReviewActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Create Account</string>
    <string name="action_register"><u> Register? </u></string>
    <string name="prompt_user_name"> User Name (FIO) </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_cabinet">cabinet</string>
    <string name="error_net">Сервер недоступен:</string>
    <string name="balans_on_date">Баланс на :</string>
    <string name="bottom_nav_text_orders">Заказы</string>
    <string name="bottom_nav_text_balance">Баланс</string>
    <string name="bottom_nav_text_operation">Операции</string>
    <string name="bottom_nav_text_cart">Корзина</string>
    <string name="name_liost_orders">Заказы (перечень)</string>
    <string name="cabinet_date">Дата</string>
    <string name="cabinet_summa">Сумма</string>
    <string name="cabinet_summa_name">Статус</string>
</resources>