<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/cabinet_data"
        android:text="@string/cabinet_date"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_small"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/cabinet_summa"
        android:text="@string/cabinet_summa"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="@dimen/padding_small"
        android:layout_weight="1"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/cabinet_summa_name"
        android:text="@string/cabinet_summa_name"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingRight="@dimen/padding_small"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        />


</LinearLayout>